[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcap-summary"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Heath Brown", email = "heathd.brown@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "pyshark"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/pcap-summary#readme"
Issues = "https://github.com/unknown/pcap-summary/issues"
Source = "https://github.com/unknown/pcap-summary"

[project.scripts]
pcap-summary = "pcap_summary.cli:pcap_summary"

[tool.hatch.version]
path = "pcap_summary/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "black",
  "pylint",
  "mypy"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pcap_summary --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "pcap_summary/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
